# CMPUF

./: CMakeLists.txt  CMakePresets.json  COMPILATION_ET_EXECUTION.md  Compilations  Makefile  MozartSkype  README  README.md
cpp/: benchmark  benchmark.cpp  cmpuf.cpp  greedy_legacy.cpp  modele.cpp  pmedian.cpp  test.cpp  transport.cpp  tri.cpp
doc/: DOCUMENTATION_TECHNIQUE.tex  TECHNICAL_DOCUMENTATION_EN.aux  TECHNICAL_DOCUMENTATION_EN.out  TECHNICAL_DOCUMENTATION_EN.tex  TECHNICAL_DOCUMENTATION_EN.toc
h/: cmpuf.h  greedy.h  greedy_old.h  pmedian.h  transport.h  tri.h
parameters/: param
results/hospital/: results2026_v1_calgaryhospital15_4_0.00_5_40_30000  results2026_v1_garyhospital15_4_0.00_5_40_30000  solcent_v1_calgaryhospital15_4_0.00_5_40_30000  solcent_v1_garyhospital15_4_0.00_5_40_30000  solgreedy_v1_calgaryhospital15_4_0.00_5_40_30000  solgreedy_v1_garyhospital15_4_0.00_5_40_30000  solopt_v1_calgaryhospital15_4_0.00_5_40_30000  solopt_v1_garyhospital15_4_0.00_5_40_30000
